# happy_vllm

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  MANIFEST.in  README.md  gen_ref_pages.py  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  version.txt
.github/workflows/: bandit.yaml  build_and_tests.yaml  docs.yaml  install_test_from_requirements.yaml  linter.yaml  publish-pypi.yaml  publish_container_registry.yaml  publish_docker_image.yaml  publish_docker_image_docker_hub.yaml  publish_docker_image_github_registry.yaml  vulnerability.yaml  wheel.yaml
.github/workflows/scripts/: cuda-install.sh
arguments/: index.html
deploying_with_docker/: index.html
docs/: arguments.md  deploying_with_docker.md  index.md  pros.md
docs/Models/: Models.md
docs/Quick_start/: Quick_start.md
docs/Serving/: Serving.md
docs/endpoints/: data_manipulation.md  embeddings.md  endpoints.md  generate.md  technical.md  tokenizer.md
endpoints/data_manipulation/: index.html
endpoints/embeddings/: index.html
endpoints/endpoints/: index.html
endpoints/generate/: index.html
endpoints/technical/: index.html
endpoints/tokenizer/: index.html
examples/function_tools/: README.md  function_tools.py  function_tools_util.py  functions.py  test_function_tools.py  test_schemas_functional.py
examples/function_tools/routers/: functional.py
examples/function_tools/routers/schema/: functional.py
examples/function_tools/tests/: test_function_tools.py  test_schemas_functional.py
examples/image_input/: README.md  image_input.py  image_input_tutorial.ipynb
examples/image_input/.ipynb_checkpoints/: test_image_input-checkpoint.ipynb
examples/image_input/tests/: test_image_base64.txt  test_image_input.py
examples/transcription/: README.md  transcription_tutorial.ipynb
prebuildfs/usr/sbin/: install_packages
pros/: index.html
reference/SUMMARY/: index.html
reference/happy_vllm/: index.html
reference/happy_vllm/application/: index.html
reference/happy_vllm/core/: index.html
reference/happy_vllm/core/config/: index.html
reference/happy_vllm/core/logtools/: index.html
reference/happy_vllm/core/resources/: index.html
reference/happy_vllm/engine/: index.html
reference/happy_vllm/engine/mp_engine/: index.html
reference/happy_vllm/launch/: index.html
reference/happy_vllm/logits_processors/: index.html
reference/happy_vllm/logits_processors/json_format/: index.html
reference/happy_vllm/logits_processors/response_pool/: index.html
reference/happy_vllm/logits_processors/utils_parse_logits_processors/: index.html
reference/happy_vllm/middlewares/: index.html
reference/happy_vllm/middlewares/exception/: index.html
reference/happy_vllm/model/: index.html
reference/happy_vllm/model/model_base/: index.html
reference/happy_vllm/routers/: index.html
reference/happy_vllm/routers/functional/: index.html
reference/happy_vllm/rpc/: index.html
reference/happy_vllm/utils/: index.html
reference/happy_vllm/utils_args/: index.html
search/: search_index.json
src/happy_vllm/: __init__.py  application.py  launch.py  utils.py  utils_args.py
src/happy_vllm/core/: __init__.py  config.py  logtools.py  resources.py
src/happy_vllm/engine/: mp_engine.py
src/happy_vllm/function_tools/: functions.py
src/happy_vllm/logits_processors/: json_format.py  min_tokens.py  response_pool.py  utils_parse_logits_processors.py
src/happy_vllm/middlewares/: exception.py
src/happy_vllm/model/: __init__.py  model_base.py  openai_serving_chat_fixed.py  openai_serving_engine_fixed.py
src/happy_vllm/routers/: __init__.py  functional.py  technical.py
src/happy_vllm/rpc/: __init__.py  server.py
tests/: conftest.py  test_config.py  test_function_tools.py  test_json_format.py  test_min_tokens.py  test_model_base.py  test_response_pool.py  test_routers_functionnal.py  test_routers_technical.py  test_schemas_functional.py  test_schemas_utils.py  test_utils.py  test_utils_args.py  test_utils_parse_logits_processors.py
tests/data/: extra_information.json
(+11 files in other folders)
