[build-system]
requires = ["setuptools>=41"]
build-backend = "setuptools.build_meta"

[project]
name = "happy_vllm"
description = "happy_vllm is a REST API for vLLM, production ready"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "vllm>=0.4.2,<1.0",
    "fastapi>=0.111.0,<1.0",
    "pydantic_settings>=2.2.1,<3.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "prometheus_client>=0.20.0,<1.0",
    "numpy>=1.26.4",
    "jsonschema>=4.22.0,<5.0"
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["happy_vllm*"]

[project.scripts]
happy-vllm = "happy_vllm.launch:main"

[project.optional-dependencies]
test = ["httpx>=0.23,<1.0", "pytest>=8.2.0,<9.0", "pytest-cov>=5.0.0,<6.0", "mypy>=1.7.1,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=happy_vllm"
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_",
    "ignore:IPython could not be loaded!"
]

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
"happy_vllm.routers.schemas.examples" = ["*.json"]
